--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jquery": "^3.1.1"
   },
   "devDependencies": {
+    "font-awesome": "^4.7.0",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-nunjucks": "^2.3.0",
