--- a/package.json
+++ b/package.json
@@ -7,19 +7,12 @@
     "bootstrap-sass": "^3.3.7",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
-    "gulp-install": "^0.6.0",
-    "jquery": "^3.1.1"
-  },
-  "devDependencies": {
+    "jquery": "^3.1.1",
     "font-awesome": "^4.7.0",
-    "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-nunjucks": "^2.3.0",
     "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.9.1",
-    "gulp-uglify": "^2.0.0",
-    "nunjucks": "^3.0.0",
-    "require-dir": "^0.3.1"
+    "gulp-uglify": "^2.0.0"
   },
   "scripts": {
     "gulp": "gulp",
