--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "dependencies": {
     "bootstrap-sass": "^3.3.7",
     "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "jquery": "^3.1.1",
     "font-awesome": "^4.7.0",
+    "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-nunjucks": "^2.3.0",
     "gulp-sass": "^2.3.2",
-    "gulp-uglify": "^2.0.0"
+    "gulp-uglify": "^2.0.0",
+    "jquery": "^3.1.1",
+    "scrollreveal": "^3.3.2"
   },
   "scripts": {
     "gulp": "gulp",
